更改 Yii2 安装的时效性

--- a/src/ch-1-03.md
+++ b/src/ch-1-03.md
@@ -230,7 +230,7 @@ $ sudo ln -s /opt/lampp/bin/composer.phar /usr/local/bin/composer
 
 ```bash
 $ cd /opt/lampp/htdocs/www/
-$ composer global require "fxp/composer-asset-plugin:1.1.1"
+$ composer global require "fxp/composer-asset-plugin:^1.2.0"
 ```
 
 接下来下载 basic,其实我更愿意直接下载 basic 的压缩包，然后解压缩在这里。为了不必要的装，下面用 `composer` 一把。
