动员前的准备

--- a/src/ch-1-12.md
+++ b/src/ch-1-12.md
@@ -1,1 +1,261 @@
 # CSS 简介
+
+CSS 是啥玩意呢？
+
+## CSS 使用方法
+
+参考东软科技培训资料，有改动。
+
+### 1、没有 CSS 文件
+
+下面是 *css.html* 文件，其内容如下。
+
+```html
+<!-- 没有 css 的文件 -->
+<html>
+<body>
+<br>
+
+<font face="Helvetica" color="red">
+	<h3>1.What is the Cascading Style Sheet</h3>
+</font><br>
+
+<font face="Helvetica" color="red">
+	<h3>2.How to format XML document</h3>
+</font><br>
+
+<font face="Helvetica" color="red">
+	<h3>3.Using CSS in HTML document</h3>
+</font><br>
+
+<font face="Helvetica" color="red">
+	<h3>4.Using CSS in XML document</h3>
+</font>
+</body>
+</html>
+```
+
+其预览效果：
+
+<pre>
+<html>
+<body>
+<br>
+
+<font face="Helvetica" color="red">
+	<h3>1.What is the Cascading Style Sheet</h3>
+</font><br>
+
+<font face="Helvetica" color="red">
+	<h3>2.How to format XML document</h3>
+</font><br>
+
+<font face="Helvetica" color="red">
+	<h3>3.Using CSS in HTML document</h3>
+</font><br>
+
+<font face="Helvetica" color="red">
+	<h3>4.Using CSS in XML document</h3>
+</font>
+</body>
+</html>
+</pre>
+
+### 2、有 css 的文件
+
+下面是 *css.html* 文件，其内容如下。
+
+```html
+<!-- 有 css 的文件 -->
+<html><head>
+	<style>
+
+		h3{font-family:Helvetica;color:red}
+
+	</style>
+</head>
+<body>
+<br>
+<h3>1.What is the Cascading Style Sheet</h3><br>
+<h3>2.How to format XML document</h3><br>
+<h3>3.Using CSS in HTML document</h3><br>
+<h3>4.Using CSS in XML document</h3>
+</body>
+</html>
+```
+
+其预览效果如下。
+
+<pre>
+<html><head>
+	<style>
+
+		h3{font-family:Helvetica;color:red}
+
+	</style>
+</head>
+<body>
+<br>
+<h3>1.What is the Cascading Style Sheet</h3><br>
+<h3>2.How to format XML document</h3><br>
+<h3>3.Using CSS in HTML document</h3><br>
+<h3>4.Using CSS in XML document</h3>
+</body>
+</html>
+</pre>
+
+## 
+CSS的样式及将样式表加入到页面中
+
+– 内联样式
+– 嵌入样式
+– 外联样式
+
+内联样式—inlineCSS.html
+– 把样式代码内联到标记内
+• 使用style作为属性,样式语句作为属性值
+• 如:`<p style="color:blue;margin-left:20px">`
+• 控制<table>标记的边框样式为不折叠
+
+```html
+<html>
+<head>
+<title>inline CSS</title>
+</head>
+<body>
+<h1>1.What is the Cascading Style Sheet</h1><br>
+<h2>2.How to format XML document</h2><br>
+<h3>3.Using CSS in HTML document</h3><br>
+<h4>4.Using CSS in XML document</h4>
+<p style="color:blue;margin-left:20px">
+This is a paragraph
+</p>
+<p>
+for test
+</p>
+</body>
+</html>
+```
+
+<pre>
+<html>
+<head>
+<title>inline CSS</title>
+</head>
+<body>
+<h1>1.What is the Cascading Style Sheet</h1><br>
+<h2>2.How to format XML document</h2><br>
+<h3>3.Using CSS in HTML document</h3><br>
+<h4>4.Using CSS in XML document</h4>
+<p style="color:blue;margin-left:20px">
+This is a paragraph
+</p>
+<p>
+for test
+</p>
+</body>
+</html>
+</pre>
+
+嵌入样式—internalCSS.html
+– 使用<style>标记把样式代码插入到页面中
+– 一般插入到<head>标记中
+– 如:
+
+```html
+<head>
+
+<style type="text/css">
+css 语句
+</style>
+</head>
+```
+
+```html
+<html>
+<head>
+<title>internal CSS</title>
+<style type="text/css">
+<!--
+body {font:10pt "Arial"}
+/*  15pt/17pt  : CSS1/CSS2 */
+h1 {font:15pt/17pt "Arial";font-weight:bold;color:maroon}
+h2 {font:13pt/15pt "Arial";font-weight:bold;color:blue}
+p {font:10pt/12pt "Arial";color:black}
+-->
+</style>
+</head>
+<body>
+<h1>1.What is the Cascading Style Sheet</h1><br>
+<h2>2.How to format XML document</h2><br>
+<h3>3.Using CSS in HTML document</h3><br>
+<h4>4.Using CSS in XML document</h4>
+<p>
+This is a paragraph
+</p>
+</body>
+</html>
+```
+
+<pre>
+<html>
+<head>
+<title>internal CSS</title>
+<style type="text/css">
+<!--
+body {font:10pt "Arial"}
+/*  15pt/17pt  : CSS1/CSS2 */
+h1 {font:15pt/17pt "Arial";font-weight:bold;color:maroon}
+h2 {font:13pt/15pt "Arial";font-weight:bold;color:blue}
+p {font:10pt/12pt "Arial";color:black}
+-->
+</style>
+</head>
+<body>
+<h1>1.What is the Cascading Style Sheet</h1><br>
+<h2>2.How to format XML document</h2><br>
+<h3>3.Using CSS in HTML document</h3><br>
+<h4>4.Using CSS in XML document</h4>
+<p>
+This is a paragraph
+</p>
+</body>
+</html>
+</pre>
+
+外联
+• 外联样式—externalCSS.html
+– 通过外部样式文件对页面进行控制
+– 外部的样式文件通过HTML的link元素连接到HTML文档中
+
+`<link rel="stylesheet" href="mystyle.css" type="text/css">`
+
+```html
+<html>
+<head>
+<title>External CSS</title>
+<link rel="stylesheet" href="mystyle.css" type="text/css">
+</head>
+<body>
+<h1>1.What is the Cassading Style Sheet?</h1><br>
+<h3>2.How to format XML document?</h3><br>
+<h3>3.Using CSS in HTML document.</h3><br>
+<h3>4.Using CSS in XML doument.</h3><br>
+</body>
+<html>
+```
+
+<pre>
+<html>
+<head>
+<title>External CSS</title>
+<link rel="stylesheet" href="../css/mystyle.css" type="text/css">
+</head>
+<body>
+<h1>1.What is the Cassading Style Sheet?</h1><br>
+<h3>2.How to format XML document?</h3><br>
+<h3>3.Using CSS in HTML document.</h3><br>
+<h3>4.Using CSS in XML doument.</h3><br>
+</body>
+<html>
+</pre>
