--- a/src/ch-2-02.md
+++ b/src/ch-2-02.md
@@ -9,7 +9,7 @@
 
 接到客户提供的开发文档和期望的效果图，谈好日期和要求等。由于是个人做网站，很多要求都是口头上的，而且是大致想法，并没有太多纸质文档。各种进展都是随着开发的进行慢慢协商修改的。效率不高。在开发后期，由于进度太慢，购买了别人已经成熟的产品，几乎宣告了本网站的失败。所幸提供了一些操作界面等方面的参考内容，接下来就是在明知几乎被抛弃的前提下，出于学习的目的，模仿别人已经成熟的界面，完善网站的内容。
 
-### **开始时任务的大致内容**
+### 开始时任务的大致内容
 
 做人员在位状态动态管理系统。
 
@@ -19,14 +19,20 @@
 + 人员动作分为好几种等等。
 + 随着开发的进展，对遇到的问题，再商讨任务内容。
 
-### **网站接近尾声时再回顾**
+### 网站接近尾声时再回顾
 
 现实中，网站开发启动时几乎不可能完全预测最终的所有功能，至少对我个人而言是这样子的。不可避免的调整一部分任务，增加一些任务，甚至删除部分任务。
+
 由于 MVC 良好的设计模式，本身就减少了不同事件的依赖性，如果新任务有较大的独立性，增加一个新的功能也是很轻松的事情。最头疼的莫过于数据库表格的变动，相应的代码也要跟着变动，改动相当头疼。所以从一开始就要准备两手应对这样的任务变化，一是代码备份及文档记录，二是整洁代码做好可扩展可维护性。
 
-由于开发时间拖得过长，超过两年，中间发生了好几件大事。第一件事：显示界面、操作界面的大改变，并增加了一些新的要求，这个只是导致部分功能的重新改写，花费心思尚可做到。第二件事：单位嫌弃开发时间过长，直接购买了别人的网站源码以及配套硬件设施，直接导致本网站差点死掉，后来在主要负责人的坚持下，网站作为一种“废材”形式，保留下来了，但原本网站运行的 64 位 centos 系统也被改为 win server 2008 R2，数据库也被改为 MS SQL Server 2008 了，“废材”只可以提取别人网站的数据，用一种别样的方式显示数据，无法更改数据，换取一种屈辱的存在，这就是本章开头提到“有志者事竟成”那句对联的原因。第三件事：别人的网站功能不堪，需要增加新功能；而寻找到了虚拟机能够作服务器，而且可以在 64 位 centos 下，通过安装 MS SQL Server 的驱动，修改数据，于是“废材”有提供新功能的存在价值了。
+由于开发时间拖得过长，超过两年，中间发生了好几件大事。
+
+- 第一件事：显示界面、操作界面的大改变，并增加了一些新的要求，这个只是导致部分功能的重新改写，花费心思尚可做到。
+- 第二件事：单位嫌弃开发时间过长，直接购买了别人的网站源码以及配套硬件设施，直接导致本网站差点死掉，后来在主要负责人的坚持下，网站作为一种“废材”形式，保留下来了，但原本网站运行的 64 位 centos 系统也被改为 win server 2008 R2，数据库也被改为 MS SQL Server 2008 了，“废材”只可以提取别人网站的数据，用一种别样的方式显示数据，无法更改数据，换取一种屈辱的存在，这就是本章开头提到“有志者事竟成”那句对联的原因。
+- 第三件事：别人的网站功能不堪，需要增加新功能；而寻找到了虚拟机能够作服务器，而且可以在 64 位 centos 下，通过安装 MS SQL Server 的驱动，修改数据，于是“废材”有提供新功能的存在价值了。
 
 经历这么多变故，网站的任务从使用频率和使用人员上已经变成如下这么几大类了：
+
 + 有人使用，非常频繁的，门口出入管理。
 + 有人使用，较为频繁的，周末出入管理。
 + 有人使用，不够经常的，休假登记管理。
@@ -44,6 +50,7 @@
 + 尚未考虑到的。
 
 相对来说，根据频率和人员可以较好的保持各部分的独立性，增强网站的扩展性。
+
 + 无人使用的基本都是定时任务，交给后台管理，放在 *./console/* 文件夹。
 + 有人使用的后台维护，放在 *./backend/* 文件夹。
 + 有人使用的各种操作，都放在 *./frontend/* 文件夹。根据人员类型的不同，决定页面的不同访问权限。
@@ -52,6 +59,7 @@
 
 这是一个人员管理的网站，网上应当有很多相关的公开源码可供参考。
 网站设计应当遵循以下原则：
+
 + 尽可能的使用已有源码，加快进度；
 + 应当仔细、仔细、再仔细的慎重考虑设计数据库表；
 + 前后端分开；
@@ -62,13 +70,14 @@
 整体框架应该以人为主要考虑因素，管理者数量稀少，被管理者没有太多登录该网站的必要。应当实现管理者和被管理者的分开存储。
 网站还要考虑跟硬件连接。
 
-**在网站接近尾声时，重新分析**
+### 在网站接近尾声时，重新分析
 
 作为主要开发者，由于要参与网站相关的绝大部分事务，对这个网站的理解如下。
-+ 1、“工欲善其事，必先利其器”。当然最开始是个菜鸟，慢慢的学习技术，边学习边开发，确实导致进展缓慢。但是一些非技术性的原因，在网站后期，也就是不怎么需要陌生技术的时候，极大的阻碍了网站的进展。这些非技术因素包括：缺少光盘和刻录机，由于网站运行网络不能直接使用优盘之类的设备，只能使用光盘。光盘和刻录机损坏和缺乏带来的延误，都是连续几天几天的。有时候感觉不可思议，但是这就是事实。另外一个非技术因素是关系协调，虽然领导负总责，但是跟相关人员中的哪一位关系处不好，带来的协调延误，不是整天整天的，也得半天半天的计算。这些非技术因素还包括一些个人的性格：个人感觉自己不够有胆魄，本来这个涉及人员管理的东西，就可能剥夺很多人的“潜利益”,这几天读了两本书《毛泽东和他的二十四位老师》以及《信任的速度·寓言版》，分明感觉，自己交了书中提到的“信任税”，毛的故事告诉一个道理，成事不仅仅需要智慧，还需要很多事情。最后我想提的非技术因素就是硬件了，本来就跑在虚拟机上，性能已经够限制的了，竟然还给了那么一个烂的电脑，连 64 位虚拟机都安装不了，为了跟 64 位的 MS SQL Server 打交道，郁闷的等待了两周，太想骂人了。如果可以重来，一定要把硬件给我弄好，这都弄得啥破事。
-+ 2、Javascript 知识的欠缺。这个是到现在都没有解决的问题。一直没有更好的时间去学习哪怕 Javascript 的一个框架呢？网站的可操作性特别差，只能用很简单很简单的一点 Javascript 的语句，实现非常简单的一些步骤。
-+ 3、这个网站的功能其实不是太复杂，而且很多是相互独立的模块。应当坚持“步步为营，稳扎稳打”的方针，写一点，整理代码一点，测试一点，做完一个模块，再继续下一个功能。不然到头来都是问题，只能慢慢的测试了。
-+ 4、由于后期变故，源代码功能和数据库表格都要跟着变，这个简直无法避免。所以要学会数据库表格变化了，代码跟着变化的技术。
+
+1. “工欲善其事，必先利其器”。当然最开始是个菜鸟，慢慢的学习技术，边学习边开发，确实导致进展缓慢。但是一些非技术性的原因，在网站后期，也就是不怎么需要陌生技术的时候，极大的阻碍了网站的进展。这些非技术因素包括：缺少光盘和刻录机，由于网站运行网络不能直接使用优盘之类的设备，只能使用光盘。光盘和刻录机损坏和缺乏带来的延误，都是连续几天几天的。有时候感觉不可思议，但是这就是事实。另外一个非技术因素是关系协调，虽然领导负总责，但是跟相关人员中的哪一位关系处不好，带来的协调延误，不是整天整天的，也得半天半天的计算。这些非技术因素还包括一些个人的性格：个人感觉自己不够有胆魄，本来这个涉及人员管理的东西，就可能剥夺很多人的“潜利益”,这几天读了两本书《毛泽东和他的二十四位老师》以及《信任的速度·寓言版》，分明感觉，自己交了书中提到的“信任税”，毛的故事告诉一个道理，成事不仅仅需要智慧，还需要很多事情。最后我想提的非技术因素就是硬件了，本来就跑在虚拟机上，性能已经够限制的了，竟然还给了那么一个烂的电脑，连 64 位虚拟机都安装不了，为了跟 64 位的 MS SQL Server 打交道，郁闷的等待了两周，太想骂人了。如果可以重来，一定要把硬件给我弄好，这都弄得啥破事。
+1. Javascript 知识的欠缺。这个是到现在都没有解决的问题。一直没有更好的时间去学习哪怕 Javascript 的一个框架呢？网站的可操作性特别差，只能用很简单很简单的一点 Javascript 的语句，实现非常简单的一些步骤。
+1. 这个网站的功能其实不是太复杂，而且很多是相互独立的模块。应当坚持“步步为营，稳扎稳打”的方针，写一点，整理代码一点，测试一点，做完一个模块，再继续下一个功能。不然到头来都是问题，只能慢慢的测试了。
+1. 由于后期变故，源代码功能和数据库表格都要跟着变，这个简直无法避免。所以要学会数据库表格变化了，代码跟着变化的技术。
 
 ## 三、实现思路
 
@@ -127,14 +136,20 @@
 
 ### 4、开发进度安排（现在发现，进度安排完全不靠谱 20160802）
 
-最好在两个月内完成。
+这里略。（20171126）
 
-* 2015.11.01-2015.12.01 实现查阅资料文档和初步设计
-* 2015.12.01-2016.01.01 草稿完成
-其中：
-  + 第一周 菜单的设计以及测试环境的搭建
-  + 第二三周 菜单功能实现以及问题总结
-  + 第四周 设计后台
-  + 第五周 测试
-* 2016.01.01- 待定
+## 四、开源后
 
+开源后，代码主要为了方便学习，很多功能可能会阉割。毕竟不是专业写代码的，水平有限，但是不怕献丑，还是把他公开了。打算做好做精如下几个功能，并留下实现步骤。
+
+### 4.1 安装该网站的功能
+
+原本是没有这项功能的，看到网上好多开源的网站代码都会有个安装步骤，想模仿做一下。
+
+### 4.2 头像修改功能
+
+比较喜欢这个小功能，特地把他给提溜出来。也能让人赏心悦目的改一改头像啦。
+
+### 4.3 前端弹框 modal
+
+可以少一点页面。前端弄好了，可以很好的改善操作，同时功能也可以保证。何不多此一举呢。
