增加了一点安装说明

--- a/src/ch-2-35.md
+++ b/src/ch-2-35.md
@@ -28,5 +28,10 @@
 
 ## 三、引导到安装页面
 
-在
+根据上述分析，第一次进入网站，应当在启用 Yii 部分功能后，读取配置前，跳转到安装界面，并在安装界面里，做好配置。参考前台页面自动生成的*./frontend/web/index.php*，故*./web/index.php* 内容可以如下。
+
+
+<iframe src='../code/install-diff.html' width="100%" height="80%"></iframe>
+
+从上面代码中可以看出修改的部分，
 
