--- a/src/ch-2-35.md
+++ b/src/ch-2-35.md
@@ -28,10 +28,31 @@
 
 ## 三、引导到安装页面
 
-根据上述分析，第一次进入网站，应当在启用 Yii 部分功能后，读取配置前，跳转到安装界面，并在安装界面里，做好配置。参考前台页面自动生成的*./frontend/web/index.php*，故*./web/index.php* 内容可以如下。
+根据上述分析，第一次进入网站，应当在启用 Yii 部分功能后，读取配置前，跳转到安装界面，并在安装界面里，做好配置。参考前台页面自动生成的*./frontend/web/index.php*，故*./web/index.php* 内容可以如下。为了方便以后访问，把原来的文件 *./frontend/web/index.php* 改到 *./web/index.php* 。修改部分目录即可。也就是下面左边的代码。为了使用 `env()` 功能，还需安装一个插件。
 
+```bash
+$ composer require vlucas/phpdotenv "^2.0"
+```
 
 <iframe src='../code/install-diff.html' width="100%" height="80%"></iframe>
+
+需要对其中的 *Yii.php* 文件微调，以适应安装需求。于是新增加了一个 *./Yii.php* 文件，是对 *./vendor/yiisoft/yii2/Yii.php* 文件的修改。同时还需要添加检测是否安装的函数，如果尚未安装，则跳转到安装页面，如果已经安装，则正常启动，其配置文件从安装设定的目录重读取。配置文件采用 *env*格式的文件。其中*./vendor/yiisoft/yii2/Yii.php* 跟 *./Yii.php* 的区别如下。
+
+<iframe src='../code/yii2-diff.html' width="100%" height="80%"></iframe>
+
+**解释**
+
+- 最开头的地方需要添加读取的配置文件。
+- 在 `Yii` 类，重新定义了版本号和图标
+- 相应的 *classs.php* 文件的地址需要改变
+- `checkInstalled()` 函数中 `@root` 是提前定义的了。见 *./common/config/bootstrap.php*
+- 其中 `Yii::setAlias('root', dirname(dirname(__DIR__)));`
+
+这样就成功的把 *./web/index.php* 文件在没有安装的情况下引导到 *./web/install.php* 文件了。其实 *./web/install.php* 文件，类似模块 `install` 的引导文件。
+
+## 四、安装文件
+
+接下来需要加入安装文件了。
 
 从上面代码中可以看出修改的部分，
 
