测试是否更新

--- a/src/ch-2-35.md
+++ b/src/ch-2-35.md
@@ -28,17 +28,57 @@
 
 ## 三、引导到安装页面
 
-根据上述分析，第一次进入网站，应当在启用 Yii 部分功能后，读取配置前，跳转到安装界面，并在安装界面里，做好配置。参考前台页面自动生成的*./frontend/web/index.php*，故*./web/index.php* 内容可以如下。为了方便以后访问，把原来的文件 *./frontend/web/index.php* 改到 *./web/index.php* 。修改部分目录即可。也就是下面左边的代码。为了使用 `env()` 功能，还需安装一个插件。
+在安装前还需要调用一些辅助函数和插件。修改 *./composer.json* 函数。
+
+```json
+{
+    // 略掉很多文字
+    "require": {
+        "php": ">=5.4.0",
+        // 略掉很多文字
+        "vlucas/phpdotenv": "^2.0"
+    },
+    "require-dev": {
+        // 略
+    },
+    "autoload": {
+        "files": [
+            "common/helpers/function.php"
+        ]
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "php -r \"file_exists('.env') || copy('.env.example', '.env');@chmod('.env', 0766);\"",
+            "yii\\composer\\Installer::postCreateProject"
+        ],
+        "post-root-package-install" :[
+            "php -r \"file_exists('.env') || copy('.env.example', '.env');@chmod('.env', 0766);\"",
+            "yii\\composer\\Installer::postCreateProject"
+        ]
+    },
+    // 略
+}
+
+```
+
+**解释**
+
+- 辅助函数位于 *./common/helpers/function.php*，详情请参考代码。
+- 配置文件放在 *./.env* 文件了。
+
+为了保护隐私，把一些网站的配置从代码中提取出来，另外存放，还需安装一个插件。
 
 ```bash
 $ composer require vlucas/phpdotenv "^2.0"
 ```
 
-<iframe src='../code/install-diff.html' width="100%" height="80%"></iframe>
+根据上述分析，第一次进入网站，应当在启用 Yii 部分功能后，读取配置前，跳转到安装界面，并在安装界面里，做好配置。参考前台页面自动生成的*./frontend/web/index.php*，故*./web/index.php* 内容可以如下。为了方便以后访问，把原来的文件 *./frontend/web/index.php* 改到 *./web/index.php* 。修改部分目录即可。也就是下面左边的代码。
+
+<iframe src='../code/index-diff.html' width="100%" height="100%"></iframe>
 
 需要对其中的 *Yii.php* 文件微调，以适应安装需求。于是新增加了一个 *./Yii.php* 文件，是对 *./vendor/yiisoft/yii2/Yii.php* 文件的修改。同时还需要添加检测是否安装的函数，如果尚未安装，则跳转到安装页面，如果已经安装，则正常启动，其配置文件从安装设定的目录重读取。配置文件采用 *env*格式的文件。其中*./vendor/yiisoft/yii2/Yii.php* 跟 *./Yii.php* 的区别如下。
 
-<iframe src='../code/yii2-diff.html' width="100%" height="80%"></iframe>
+<iframe src='../code/yii2-diff.html' width="100%" height="100%"></iframe>
 
 **解释**
 
@@ -48,11 +88,88 @@ $ composer require vlucas/phpdotenv "^2.0"
 - `checkInstalled()` 函数中 `@root` 是提前定义的了。见 *./common/config/bootstrap.php*
 - 其中 `Yii::setAlias('root', dirname(dirname(__DIR__)));`
 
+其中 *./common/config/bootstrap.php* 相对于 Yii 2.0 自动生成的该文件，有如下改动。
+
+<iframe src='../code/bootstrap-diff.html' width="100%" height="100%"></iframe>
+
+**解释**
+
+- 为了方便一些函数的调用，加入了 *./common/helpers/* 文件夹下的一些文件。详细内容见开源代码。
+- 加入了关于存储的一些地址。
+
 这样就成功的把 *./web/index.php* 文件在没有安装的情况下引导到 *./web/install.php* 文件了。其实 *./web/install.php* 文件，类似模块 `install` 的引导文件。
 
 ## 四、安装文件
 
-接下来需要加入安装文件了。
+接下来需要加入安装文件了。*./web/install.php* 文件如下，
 
-从上面代码中可以看出修改的部分，
+```php
+<?php
+require __DIR__.'/../vendor/autoload.php';
+
+require __DIR__.'/../Yii.php';
+
+require __DIR__.'/../common/config/bootstrap.php';
+Yii::setAlias('@install', dirname(__DIR__) . '/install');
+Yii::setAlias('@rbac', '@backend/modules/rbac');
+
+$config = [
+    'id' => 'app-install',
+    'basePath' => '@install',
+    'controllerNamespace' => 'install\controllers',
+    'vendorPath' => dirname(__DIR__).'/vendor',
+    'runtimePath' => '@install/runtime',
+    'timezone' => 'PRC',
+    'language' => 'zh-CN',
+    'components' => [
+        'cache' => [
+            'class' => 'yii\caching\FileCache',
+            'cachePath' => '@root/cache',
+            'dirMode' => 0777 // 防止console生成的目录导致web账户没写权限
+        ],
+        'request' => [
+            'enableCookieValidation' => false
+        ],
+        'db' => [
+            'class' => 'yii\db\Connection',
+            'dsn' => env('DB_DSN'),
+            'username' => env('DB_USERNAME'),
+            'password' => env('DB_PASSWORD'),
+            'charset' => 'utf8',
+            'tablePrefix' => env('DB_TABLE_PREFIX'),
+            'enableSchemaCache' => YII_ENV_PROD,
+        ],
+    ]
+];
+(new install\Application($config))->run();
+```
+
+**解释**
+
+- 全文看，相当于把配置文件也写在这里了。
+- 权限相关和安装相关的简写（`alias`）也只放在本文件，不让其他文件可以访问。以及其他的一些权限设置。
+
+整个*./install/*、*./common/helpers/* 、 *./common/static/*、*./common/assets/* 、*./databases/*文件夹摘抄自 [Yii2CMF](https://github.com/yidashi/yii2cmf)，部分内容有改动。在此表示感谢，相关代码版权属于原作者。同时需要创建如下文件夹，并制定权限。
+
+- *./common/static/*
+- *./cache/*
+- *./api/*
+- *./api/runtime/*
+- *./database/*
+- *./web/storage/*
+- *./web/crazyman/assets/*
+- *./web/api/assets/*
+
+使用命令
+
+```bash
+$ mkdir -p -m 777 ./cache/ ./api/ \
+./api/runtime/ ./web/storage/ \
+./web/crazyman/assets/ ./web/api/assets/
+```
+
+创建这些文件夹并赋予全部权限。可以考虑减少权限设置。
+
+## 五、数据库文件的制作
+
 
