--- a/src/ch-2-35.md
+++ b/src/ch-2-35.md
@@ -170,6 +170,8 @@ $ mkdir -p -m 777 ./cache/ ./api/ \
 
 创建这些文件夹并赋予全部权限。可以考虑减少权限设置。
 
+对于后台来说，还需要修改 *./web/crazyman/index.php*，发现未安装的时候，也要引导到安装页面。
+
 ## 五、数据库文件的制作
 
 
