加入演示页面

--- a/src/ch-2-03.md
+++ b/src/ch-2-03.md
@@ -92,6 +92,12 @@ $ git status
 $ git commit -am "初始化网站"
 ```
 
+并创建分支
+
+```bash
+$ git branch ch-2-03-init
+```
+
 这样就完成了该项目的版本控制的初始化。建议每天或者每完成一个功能提交一次，便于恢复代码。
 
 ## 四、设计数据库的登录用户表
