--- a/src/ch-2-35.md
+++ b/src/ch-2-35.md
@@ -64,7 +64,7 @@
 **解释**
 
 - 辅助函数位于 *./common/helpers/function.php*，详情请参考代码。
-- 配置文件放在 *./.env* 文件了。
+- 配置文件放在 *./.env* 文件了，请确保该文件的读写权限，`chmod o+rw ./.env`。
 
 为了保护隐私，把一些网站的配置从代码中提取出来，另外存放，还需安装一个插件。
 
@@ -147,9 +147,16 @@ $config = [
 **解释**
 
 - 全文看，相当于把配置文件也写在这里了。
+- *./install/Application.php* 是 `install\Application` 源码。详见源码。
 - 权限相关和安装相关的简写（`alias`）也只放在本文件，不让其他文件可以访问。以及其他的一些权限设置。
 
-整个*./install/*、*./common/helpers/* 、 *./common/static/*、*./common/assets/* 、*./databases/*文件夹摘抄自 [Yii2CMF](https://github.com/yidashi/yii2cmf)，部分内容有改动。在此表示感谢，相关代码版权属于原作者。同时需要创建如下文件夹，并制定权限。
+整个*./install/*、*./common/helpers/* 、 *./common/static/*、*./common/assets/* 、*./databases/*文件夹摘抄自 [Yii2CMF](https://github.com/yidashi/yii2cmf)，部分内容有改动。在此表示感谢，相关代码版权属于原作者。后面生成的数据库表在 *./console/migrations/* 文件夹，所以还要修改为，
+
+```php
+    public $migrationPath = '@console/migrations';
+```
+
+用于找到数据库表格生成的地址。同时需要创建如下文件夹，并制定权限。
 
 - *./common/static/*
 - *./cache/*
@@ -172,6 +179,126 @@ $ mkdir -p -m 777 ./cache/ ./api/ \
 
 对于后台来说，还需要修改 *./web/crazyman/index.php*，发现未安装的时候，也要引导到安装页面。
 
+遇到的坑，其中数据库安装的时候，无法自动创建数据库，于是对源代码修改，修改了 `checkDb()` 函数，位于 *./install/models/DatabaseForm.php*，同时还要防止 SQL 注入，其内容被改为，
+
+```php
+    public function rules()
+    {
+        return [
+            // 略
+            [['database'], 'match', 'pattern' => '/^[a-zA-Z][a-zA-Z0-9_]{1,}$/', 'message' => '只可以包含字母数字下划线，且数字下划线不可以开头'],
+            // 略
+        ];
+    }
+
+    public function checkDb($attribute, $params)
+    {
+        $link = mysqli_connect($this->hostname, $this->username, $this->password);
+        if (mysqli_connect_errno()) {
+            $this->addError("database", mysqli_connect_error());
+            return false;
+        }
+        if (mysqli_select_db($link, $this->database) === false) {
+            // 有 SQL 注入风险，建议提高权限
+            mysqli_query($link, "CREATE DATABASE IF NOT EXISTS {$this->database} DEFAULT CHARSET utf8 COLLATE utf8_general_ci;");
+        } else {
+            $query = mysqli_query($link, "SHOW TABLES;");
+            if ($query->num_rows > 0) {
+                $this->addError("database", "您选择的数据库不为空，为避免冲突，请换个名字！");
+                return false;
+            }
+        }
+        mysqli_close($link);
+    }
+```
+
+**解释**
+
+- 由于要创建数据库， Yii 2.0 貌似无法自己创建，就改变了该函数。
+- 后续还要写入 *./.env* 文件，后面把他权限修改了 `chmod o+rw ./.env`。
+
+后来写入超级管理员的时候，发现无法实现写入，发现 *./install/controllers/SiteController.php* 的
+
+ ```php
+ use common\modules\user\models\User;
+ ```
+
+调整对应的模型（model），还要对数据库相应的表修改。留在下一节说明。
+
 ## 五、数据库文件的制作
 
+本文决定采用插件建立数据库备份功能。参考网页：https://github.com/e282486518/yii2-console-migration
 
+```bash
+$ composer require e282486518/yii2-console-migration "@dev"
+```
+
+按照使用说明，配置 *./console/config/main.php* ,（希望后期可以指定备份位置。）
+
+```php
+// 跳过很多内容
+return [
+    'id' => 'app-console',
+// ...
+    'controllerNamespace' => 'console\controllers',
+
+// 下面代码是复制过来的
+    'controllerMap' => [
+        'migrate' => [
+            'class' => 'e282486518\migration\ConsoleController',
+        ],
+    ],
+
+// 上述代码是复制过来的。
+    'components' => [
+// ...
+    ],
+    'params' => $params,
+];
+
+```
+
+运行命令，
+
+```bash
+$ ./yii migrate/backup all
+```
+
+发现自动生成的一些文件会有问题，已经提交修改代码了，尚未合并。由于网站自带了 `tbl_migaration` 数据表，而安装的命令会自动安装该表，造成冲突，本想在命令中判断是否已存在再备份，感觉不是很好。遂删除生成该表的文件。
+
+## 六、其他待修改的地方
+
+详细代码请参考源码，下面对折腾中遇到的一些问题，记录如下。
+
+修改的文件，不要跳转到 `admin`，跳转到 `crazyman` 页面，同样也是安装界面。
+
+```js
+// ./install/static/js/install.js 20
+		nextUrl="./crazyman"
+```
+
+```php
+// ./install/view/layouts/main.php 
+// 删除了部分不需要的按钮，比如最后添加模块的功能
+```
+
+```php
+// ./install/controllers/SiteController.php
+
+// 修改模型到自己指定的模型
+use common\models\User;
+
+// 略过很多代码
+
+    // 修改数据库导入路径
+    public $migrationPath = '@console/migrations';
+
+    // 修改该函数适应选定的模型
+    public function createAdminUser()
+
+    // 修改，确保可以自动创建数据库
+    public function actionSetDb()
+
+```
+
+另外还对 *./common/config/main-local.php* 以及 *./common/config/bootstrap.php* 进行了修改。详情请参考源码，这里从略。这样就实现了引导安装功能。
