加入数据库等简介

--- a/src/ch-1-17.md
+++ b/src/ch-1-17.md
@@ -1,1 +1,44 @@
-# 第十七章 常见数据库和 SQL 语法入门 MySQL 入门简介
+# 第十七章 数据库和 SQL 语法入门
+
+参考网页及书目：
+
+- https://baike.baidu.com/item/%E6%95%B0%E6%8D%AE%E5%BA%93/103728?fr=aladdin
+- 周屹 李艳娟．数据库原理及开发应用（第二版）：清华大学出版社，2013：8
+- 王珊 萨师煊．数据库系统概率（第5版）：高等教育出版社，2014：4
+- 数据库中数据的性质和简历  ．亿恩科技[引用日期2016-09-18]
+- http://www.w3school.com.cn/sql/index.asp
+- https://baike.baidu.com/item/SQL%E8%AF%AD%E5%8F%A5%E5%A4%A7%E5%85%A8/6421427?fr=aladdin
+
+下面是转载的，有改动。
+
+## 一、数据库简介
+
+严格来说，数据库是长期储存在计算机内、有组织的、可共享的数据集合。数据库中的数据指的是以一定的数据模型组织、描述和储存在一起、具有尽可能小的冗余度、较高的数据独立性和易扩展性的特点并可在一定范围内为多个用户共享。
+
+这种数据集合具有如下特点：尽可能不重复，以最优方式为某个特定组织的多种应用服务，其数据结构独立于使用它的应用程序，对数据的增、删、改、查由统一软件进行管理和控制。从发展的历史看，数据库是数据管理的高级阶段，它是由文件管理系统发展起来的。
+
+## 二、数据库的使用
+
+数据库是一个单位或是一个应用领域的通用数据处理系统，它存储的是属于企业和事业部门、团体和个人的有关数据的集合。数据库中的数据是从全局观点出发建立的，按一定的数据模型进行组织、描述和存储。其结构基于数据间的自然联系，从而可提供一切必要的存取路径，且数据不再针对某一应用，而是面向全组织，具有整体的结构化特征。
+
+数据库中的数据是为众多用户所共享其信息而建立的，已经摆脱了具体程序的限制和制约。不同的用户可以按各自的用法使用数据库中的数据；多个用户可以同时共享数据库中的数据资源，即不同的用户可以同时存取数据库中的同一个数据。数据共享性不仅满足了各用户对信息内容的要求，同时也满足了各用户之间信息通信的要求。
+
+数据库通常分为层次式数据库、网络式数据库和关系式数据库三种。而不同的数据库是按不同的数据结构来联系和组织的。
+
+## 三、结构化查询语言（SQL）简介
+
+结构化查询语言(Structured Query Language)简称SQL(发音：/ˈes kjuː ˈel/ "S-Q-L")，是一种特殊目的的编程语言，是一种数据库查询和程序设计语言，用于存取数据以及查询、更新和管理关系数据库系统；同时也是数据库脚本文件的扩展名。
+
+结构化查询语言是高级的非过程化编程语言，允许用户在高层数据结构上工作。它不要求用户指定对数据的存放方法，也不需要用户了解具体的数据存放方式，所以具有完全不同底层结构的不同数据库系统, 可以使用相同的结构化查询语言作为数据输入与管理的接口。结构化查询语言语句可以嵌套，这使它具有极大的灵活性和强大的功能。
+
+1986年10月，美国国家标准协会对SQL进行规范后，以此作为关系式数据库管理系统的标准语言（ANSI X3. 135-1986），1987年得到国际标准组织的支持下成为国际标准。不过各种通行的数据库系统在其实践过程中都对SQL规范作了某些编改和扩充。所以，实际上不同数据库系统之间的SQL不能完全相互通用。
+
+## 四、SQL 语法举例
+
+下面简要介绍几点，详细请查阅相关书籍。
+
+#### 1、创建数据库
+
+创建之前判断该数据库是否存在
+
+## 五、MySQL 简介
