继续完善第二章

--- a/src/ch-7-01.md
+++ b/src/ch-7-01.md
@@ -84,4 +84,196 @@ Disallow: /
 $ sudo apt-get install httrack
 ```
 
-下面讲个小例子，
+下面讲个小例子，启动 `httrack`，一步步创建网站镜像。
+
+```bash
+$ httrack
+
+Welcome to HTTrack Website Copier (Offline Browser) 3.49-2
+Copyright (C) 1998-2017 Xavier Roche and other contributors
+To see the option list, enter a blank line or try httrack --help
+
+Enter project name :example
+
+Base path (return=/home/litianci/websites/) :
+
+Enter URLs (separated by commas or blank spaces) :http://www.example.com
+
+Action:
+(enter)	1	Mirror Web Site(s)
+	2	Mirror Web Site(s) with Wizard
+	3	Just Get Files Indicated
+	4	Mirror ALL links in URLs (Multiple Mirror)
+	5	Test Links In URLs (Bookmark Test)
+	0	Quit
+: 2
+
+Proxy (return=none) :
+
+You can define wildcards, like: -*.gif +www.*.com/*.zip -*img_*.zip
+Wildcards (return=none) :*
+
+You can define additional options, such as recurse level (-r<number>), separated by blank spaces
+To see the option list, type help
+Additional options (return=none) :
+
+---> Wizard command line: httrack http://www.example.com -W -O "/home/litianci/websites/example"  -%v  *
+
+Ready to launch the mirror? (Y/n) :
+
+Mirror launched on Tue, 06 Feb 2018 19:19:26 by HTTrack Website Copier/3.49-2 [XR&CO'2014]
+mirroring http://www.example.com * with the wizard help..
+```
+
+本人没有真正的测试过该功能，等测试过后再来验证。上面看英文，依次是输入项目名称，复制目的目录，网址等等，请慢慢琢磨。这样可以把网站复制过来，不知道是全盘还是怎么复制的，有了这么一个玩意后，就可以在本地查找该网站的漏洞了。没有调查就没有发言权，下面从略。
+
+### 2、ICMP 扫描
+
+使用 ICMP 扫描的命令有 `ping`、`fping` 和 `traceroute` 等，很多网站都是禁止响应这类命令的，而且过度使用该命令，也可能触发对方网站的安全报警。
+
+`ping`一般默认安装的了。后面两个命令如果没有安装，可以
+
+```bash
+$ sudo apt-get install traceroute fping 
+```
+Ping是Windows、Unix和Linux系统下的一个命令。ping也属于一个通信协议，是TCP/IP协议的一部分。利用“ping”命令可以检查网络是否连通，可以很好地帮助我们分析和判定网络故障。具体怎么使用可以百度，这里来个小例子，测试是否连通百度网址。
+
+```bash
+$ ping www.baidu.com
+```
+
+通过traceroute我们可以知道信息从你的计算机到互联网另一端的主机是走的什么路径。当然每次数据包由某一同样的出发点（source）到达某一同样的目的地(destination)走的路径可能会不一样。测试一下到百度网址的路由。
+
+```bash
+$ traceroute www.baidu.com
+traceroute to www.baidu.com (111.13.100.91), 30 hops max, 60 byte packets
+ 1  192.168.1.1 (192.168.1.1)  1.621 ms  1.573 ms  4.262 ms
+ 2  10.59.136.1 (10.59.136.1)  6.105 ms  6.811 ms  7.655 ms
+ 3  221.182.72.45 (221.182.72.45)  10.093 ms 221.182.72.41 (221.182.72.41)  10.067 ms 221.182.72.45 (221.182.72.45)  10.027 ms
+ 4  223.87.44.66 (223.87.44.66)  8.285 ms  9.982 ms  9.945 ms
+ 5  * * *
+ 6  * 223.87.25.209 (223.87.25.209)  11.462 ms *
+ 7  223.87.25.209 (223.87.25.209)  8.571 ms 221.183.47.113 (221.183.47.113)  11.969 ms  11.905 ms
+ 8  221.183.37.237 (221.183.37.237)  44.321 ms 221.183.47.113 (221.183.47.113)  11.855 ms 221.183.37.237 (221.183.37.237)  60.293 ms
+ 9  221.183.37.237 (221.183.37.237)  62.602 ms  62.578 ms  62.531 ms
+10  221.183.53.182 (221.183.53.182)  62.483 ms * *
+11  * 111.13.0.174 (111.13.0.174)  61.101 ms *
+12  111.13.112.61 (111.13.112.61)  46.161 ms * *
+...
+30  * * *
+
+```
+
+`fping` 类似 `ping`，可以同时测试多个网址，详情百度，下面来个小例子。
+
+```bash
+$ fping -asg 192.168.1.0/24
+```
+### 3、DNS 深挖
+
+特定目标的 DNS 信息对渗透测试人员特别有价值。DNS 蕴含着勾勒系统和子域部署框图的信息等。Dig(domain information gropher，域名信息查询工具)，是一个 DNS 调查工具。先安装，百度后才找到安装方法的，
+
+```bash
+$ sudo apt-get install dnsutils
+```
+
+用法就是 `dig domainname`，来个小例子，
+
+```bash
+$ dig www.baidu.com
+
+; <<>> DiG 9.10.3-P4-Debian <<>> www.baidu.com
+;; global options: +cmd
+;; Got answer:
+;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 52046
+;; flags: qr rd ra; QUERY: 1, ANSWER: 3, AUTHORITY: 0, ADDITIONAL: 1
+
+;; OPT PSEUDOSECTION:
+; EDNS: version: 0, flags:; udp: 4096
+;; QUESTION SECTION:
+;www.baidu.com.			IN	A
+
+;; ANSWER SECTION:
+www.baidu.com.		909	IN	CNAME	www.a.shifen.com.
+www.a.shifen.com.	180	IN	A	111.13.100.92
+www.a.shifen.com.	180	IN	A	111.13.100.91
+
+;; Query time: 37 msec
+;; SERVER: 180.76.76.76#53(180.76.76.76)
+;; WHEN: Tue Feb 06 20:11:45 CST 2018
+;; MSG SIZE  rcvd: 101
+
+```
+
+具体用法可以使用 `dig -h` 或者百度查询。上述找到的是服务器绑定的域名。想找到其授权服务器，用如下命令，
+
+```bash
+$ dig -t ns www.baidu.com
+
+; <<>> DiG 9.10.3-P4-Debian <<>> -t ns www.baidu.com
+;; global options: +cmd
+;; Got answer:
+;; ->>HEADER<<- opcode: QUERY, status: NOERROR, id: 1950
+;; flags: qr rd ra; QUERY: 1, ANSWER: 1, AUTHORITY: 1, ADDITIONAL: 1
+
+;; OPT PSEUDOSECTION:
+; EDNS: version: 0, flags:; udp: 4096
+;; QUESTION SECTION:
+;www.baidu.com.			IN	NS
+
+;; ANSWER SECTION:
+www.baidu.com.		436	IN	CNAME	www.a.shifen.com.
+
+;; AUTHORITY SECTION:
+a.shifen.com.		610	IN	SOA	ns1.a.shifen.com. baidu_dns_master.baidu.com. 1802060010 5 5 86400 3600
+
+;; Query time: 249 msec
+;; SERVER: 180.76.76.76#53(180.76.76.76)
+;; WHEN: Tue Feb 06 20:59:58 CST 2018
+;; MSG SIZE  rcvd: 126
+
+```
+
+具体啥意思不是很懂，等继续深入了，再回头看吧。这样可以找到某个域的授权 DNS 服务器。
+
+### 4、DNS 目标识别
+
+找到某域名下的主机，以及其授权 DNS 服务器，就有可能通过 DNS 服务器查看一些信息。下面介绍一个软件 `fierce`，安装方法如下，参考网页：https://github.com/mschwager/fierce
+
+```bash
+$ sudo apt-get install python3-pip
+$ sudo pip3 install fierce
+$ fierce -h
+```
+
+一个小例子，看看百度的子域名，后面选项可以略去。
+
+```bash
+$ fierce --domain baidu.com --subdomains accounts admin ads
+```
+
+扫扫本地
+
+```bash
+$ fierce --dns-servers 192.168.1.1 --range 192.168.1.0/24
+```
+
+### 5、Maltego 图形化显示
+
+先安装吧，知道有这么个玩意，可以搜集进一步信息。
+
+```bash
+$ sudo apt-get install maltego
+```
+
+这个需要注册才可以使用，貌似需要梯子才可以访问，略过。
+
+### 6、nmap 扫描
+
+还有个软件叫 `zenmap`，安装，
+
+```bash
+$ sudo apt-get install zenmap
+```
+
+接下来就是怎么使用了，这个软件搜索比较高效，但是也容易被发现，被防御掉。有时间试试。
