加上第三章攻击服务器端

--- a/src/ch-7-01.md
+++ b/src/ch-7-01.md
@@ -1,6 +1,8 @@
-# 侦察
+# 第一章 侦察
 
 情报，情报，你懂得。《孙子兵法》开篇《始计篇》，对于“庙算”之类的，就不写在这里了。“知己知彼”还是很有必要的。有了目标就要开始侦察啦。
+
+下面是使用 Linux Deepin 操作系统进行的，非特别说明，使用的都是 Deepin 15.5 及以上的版本。
 
 ## 公司网站
 
@@ -276,4 +278,16 @@ $ sudo apt-get install maltego
 $ sudo apt-get install zenmap
 ```
 
-接下来就是怎么使用了，这个软件搜索比较高效，但是也容易被发现，被防御掉。有时间试试。
+接下来就是怎么使用了，这个软件搜索比较高效，但是也容易被发现，被防御掉。有时间试试。更详细的资料请参考 https://nmap.org/ 。对 nmap 有所认识才好。
+
+### 7、FOCA 网站元数据侦察工具
+
+参考网页：
+- https://www.elevenpaths.com/labstools/foca/index.html
+- https://github.com/ElevenPaths/FOCA
+
+有需要的时候，弄一弄。在 deepin 下怎么折腾，等有时间测试一下。
+
+## 小结
+
+选择其中几个测试一下，可以写成博客，最后再集成在这里。侦察很重要，最好再花两三周的时间，练练手。
