--- a/src/ch-7-02.md
+++ b/src/ch-7-02.md
@@ -42,4 +42,66 @@ $ sudo ln -s /opt/webshag/webshag_cli.py /usr/local/bin/webshag
 $ sudo apt-get install skipfish
 ```
 
-待续
+安装好后，通过查询 `whereis skipfish`，试探各个文件夹，找到这么一个字典文件夹 */usr/share/skipfish/dictionaries/*。一直没有理解 skipfish 要加个字典的原因。看了一下字典的内容，貌似有点想法。先来个例子试试吧。
+
+```bash
+$ skipfish -o skipfishoutput -S /usr/share/skipfish/dictionaries/complete.wl https://www.baidu.com
+```
+
+如果没有其他问题，会弹出如下页面，按下任意键就可以继续了。
+
+```
+Welcome to skipfish. Here are some useful tips:
+
+1) To abort the scan at any time, press Ctrl-C. A partial report will be written
+   to the specified location. To view a list of currently scanned URLs, you can
+   press space at any time during the scan.
+
+2) Watch the number requests per second shown on the main screen. If this figure
+   drops below 100-200, the scan will likely take a very long time.
+
+3) The scanner does not auto-limit the scope of the scan; on complex sites, you
+   may need to specify locations to exclude, or limit brute-force steps.
+
+4) There are several new releases of the scanner every month. If you run into
+   trouble, check for a newer version first, let the author know next.
+
+More info: http://code.google.com/p/skipfish/wiki/KnownIssues
+
+NOTE: The scanner is currently configured for directory brute-force attacks,
+and will make about 241435 requests per every fuzzable location. If this is
+not what you wanted, stop now and consult the documentation.
+
+Press any key to continue (or wait 60 seconds)... 
+```
+
+扫描一会，如果不耐烦了，可以按 Ctrl + C 终止。此时，就会在刚才 `-o` 输出的文件夹 `skipfishoutput`，如下页面。
+
+```
+Database statistics: total, 1 done (2.08%)    dium, 0 high impact
+    In progress : 45 pending, 2 init, 0 attacks, 0 dict    20 par, 0 val
+         Pivots : 48 total, 1 done (2.08%)    dium, 0 high impact
+    In progress : 45 pending, 2 init, 0 attacks, 0 dict    20 par, 0 val
+  Missing nodes : 0 spotted0 warn, 0 low, 1 medium, 0 high impact
+     Node types : 2 serv, 15 dir, 3 file, 0 pinfo, 9 unkn, 20 par, 0 val
+   Issues found : 18 info, 0 warn, 0 low, 1 medium, 0 high impact
+      Dict size : 2249 words (34 new), 110 extensions, 256 candidates
+     Signatures : 77 total
+        
+[!] Scan aborted by user, bailing out!
+[+] Copying static resources...
+[+] Sorting and annotating crawl nodes: 48
+[+] Looking for duplicate entries: 48
+[+] Counting unique nodes: 48
+[+] Saving pivot data for third-party tools...
+[+] Writing scan description...
+[+] Writing crawl tree: 48
+[+] Generating summary views...
+[+] Report saved to 'skipfishoutput/index.html' [0x4bb2355d].
+[+] This was a great day for science!
+
+```
+
+创建了一个网站，用浏览器打开其中的 `index.html` 就可以了。貌似，里面的各个文件都是用的词典里的名字，然后遍历，不确定正确，待查。
+
+### 3、ProxyStrike
