过年暂停更新

--- a/src/ch-7-02.md
+++ b/src/ch-7-02.md
@@ -105,3 +105,5 @@ Database statistics: total, 1 done (2.08%)    dium, 0 high impact
 创建了一个网站，用浏览器打开其中的 `index.html` 就可以了。貌似，里面的各个文件都是用的词典里的名字，然后遍历，不确定正确，待查。
 
 ### 3、ProxyStrike
+
+书没有带，过年期间暂停更新。
